--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get: ^4.6.5
   retrofit: ^3.3.1
   dio_logging_interceptor: ^1.0.1
+  fluttertoast: ^8.2.1
+  syncfusion_flutter_calendar: ^20.4.44
 
 dev_dependencies:
   retrofit_generator: '>=4.0.0 <5.0.0'
